.metadata/.plugins/org.eclipse.cdt.ui/testserialconsole.build.log
14:57:57 **** Incremental Build of configuration Debug for project testserialconsole ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DDEBUG -DSTM32F429xx -c -I../Drivers/CMSIS/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Core/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function '_write':
../Core/Src/main.c:62:20: error: incompatible type for argument 1 of 'HAL_UART_Transmit'
  HAL_UART_Transmit(huart4, (uint8_t*)ptr, len, HAL_MAX_DELAY);
                    ^~~~~~
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:364:0,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:30,
                 from ../Core/Inc/main.h:31,
                 from ../Core/Src/main.c:22:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:696:19: note: expected 'UART_HandleTypeDef * {aka struct __UART_HandleTypeDef *}' but argument is of type 'UART_HandleTypeDef {aka struct __UART_HandleTypeDef}'
 HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
                   ^~~~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:108:11: warning: passing argument 1 of 'printf' makes pointer from integer without a cast [-Wint-conversion]
    printf(counter++);
           ^~~~~~~
In file included from ../Core/Src/main.c:26:0:
c:\st\stm32cubeide_1.3.0\stm32cubeide\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.7-2018-q2-update.win32_1.0.0.201904181610\tools\arm-none-eabi\include\stdio.h:200:5: note: expected 'const char * restrict' but argument is of type 'int'
 int printf (const char *__restrict, ...)
     ^~~~~~
make: *** [Core/Src/subdir.mk:33: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

14:57:58 Build Failed. 2 errors, 1 warnings. (took 737ms)

